--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -1,8 +1,9 @@
 $icon-width: 20px;
-$header-height: 80px;
+$header-height: 70px;
 
 .header {
 	height: $header-height;
+	width: 100%;
 	background: #ececec;
 	
 	.back-icon {
@@ -13,7 +14,7 @@ $header-height: 80px;
 	}
 
 	.logo {
-		font-size: 20px;
+		font-size: 17px;
 		margin: 0 $icon-width 0 0;
 		vertical-align: middle;
 		line-height: $header-height; 
