--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -5,6 +5,7 @@ $header-height: 70px;
 	height: $header-height;
 	width: 100%;
 	background: #ececec;
+	text-align: center;
 	
 	.back-icon {
 		height: 100%;
