--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -2,6 +2,8 @@ $icon-width: 20px;
 $header-height: 70px;
 
 .header {
+	position: fixed;
+	top: 0;
 	height: $header-height;
 	width: 100%;
 	background: #ececec;
