fixed size for origin images

--- a/src/components/show/show.styles.scss
+++ b/src/components/show/show.styles.scss
@@ -28,11 +28,12 @@
 		font-size: 15px
 	}
 	.big-img {
-		width: 80%;
+		width: 270px;
+		height: 430px;
 		position: fixed;
 		left: 50%;
-		margin-left: -150px;
+		margin-left: -135px;
 		top: 50%;
-		margin-top: -225px;
+		margin-top: -215px;
 	}
 }
